--- a/web/package.json
+++ b/web/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "start": "npm run serve",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start":"npm run serve"
   },
   "dependencies": {
     "core-js": "^3.6.5",
