--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.js linguist-language=python vue
-*.css linguist-language=python vue
-*.html linguist-language=python vue
+*.js linguist-language=python
+*.css linguist-language=python
+*.html linguist-language=python
